@@ -150,7 +150,8 @@ mix_init (int *esd, int *player)
     
   if (*player < 0)
     {
-      if (all_info = esd_get_all_info (*esd))
+      all_info = esd_get_all_info (*esd);
+      if (all_info)
 	{
 	  for (player_info = all_info->player_list; player_info;
 	       player_info = player_info->next)
@@ -322,10 +323,12 @@ mixctl (int fd, request_t request, void *argp)
       if (player > 0)
 	{
 	  esd_info_t *all_info;
-	  esd_player_info_t *player_info;
 
-	  if (all_info = esd_get_all_info (esd))
+	  all_info  = esd_get_all_info (esd);
+	  if (all_info)
 	    {
+	      esd_player_info_t *player_info;
+
 	      for (player_info = all_info->player_list; player_info;
 		   player_info = player_info->next)
 		if (player_info->source_id == player)
@@ -384,12 +387,13 @@ ioctl (int fd, request_t request, ...)
   argp = va_arg (args, void *);
   va_end (args);
 
-  if (fd != sndfd && fd != mixfd)
-    return (*func) (fd, request, argp);
-  else if (fd == sndfd)
+  if (fd == sndfd)
     return dspctl (fd, request, argp);
-  else if (use_mixer)
-    return mixctl (fd, request, argp);
+  else if (fd == mixfd) {
+    if(use_mixer)
+      return mixctl (fd, request, argp);
+  } else /* (fd != sndfd && fd != mixfd) */
+    return (*func) (fd, request, argp);
 }
 
 int
